w32:spawn: New flag GPGRT_PROCESS_STDIO_NUL.

* src/gpg-error.h.in (GPGRT_PROCESS_STDIO_NUL): New.
* src/spawn-w32.c (w32_open_null): Add ENABLE_NULL_DEVICE argument.
(_gpgrt_process_spawn): Follow the change.

--

GnuPG-bug-id: 7723
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>